# gov

./: .env.example  .gitignore  AI_INTERVIEW_SYSTEM_README.md  Cargo.toml  ENHANCED_LIGHTHOUSE_AI_IMPLEMENTATION_COMPLETE.md  EXPERT_BLUEPRINT_IMPLEMENTATION_COMPLETE.md  EXPERT_CONTINUATION_PROMPT.md  EXPERT_FEEDBACK_FINAL_IMPLEMENTATION.md  EXPERT_FEEDBACK_IMPLEMENTATION.md  EXPERT_FEEDBACK_IMPLEMENTATION_COMPLETE.md  EXPERT_FEEDBACK_IMPLEMENTATION_REPORT.md  GAP_RESOLUTION_COMPLETE.md  HANDOFF.md  HANDOFF_COMPLETION_REPORT.md  HANDOFF_CONTINUATION.md  HANDOFF_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  LIGHTHOUSE_COMPLETION_SUMMARY.md  LIGHTHOUSE_ENHANCEMENT_SUMMARY.md  OPTIMIZED_BATCH_SYSTEM_README.md  PROJECT_OVERVIEW.md  README.md  SYSTEM_AUDIT_AND_CLEANUP.md  UI_LAYER_IMPLEMENTATION_SUMMARY.md  ai_interview_system.py  batch_governor_quest_generator.py  build.rs  class_samples.json  class_samples.md  clean_sacred_codex.py  clear_visual_aspects.py  codebase_inventory_analyzer.py  complete_codebase_inventory_report.json  comprehensive_escape_purification_report.json  comprehensive_escape_purifier.py  debug_tap_protocol.py  enhanced_sacred_purification_report.json  enhanced_sacred_purifier.py  enochian_governors_advanced.json  final_line_break_purification_report.json  (+41 more)
community/: beta_feedback_collector.py
data/: aethyrs.json
divination_systems/: astrology_engine.py  divination_master.py  i_ching_engine.py
docs/: IMPLEMENTATION_STATUS.md  TAP_PROTOCOL_ENHANCED_GUIDE.md
generated_art/: USAGE_GUIDE.md  batch_prompts.csv  batch_prompts.json  batch_prompts_simple.txt  dalle_batch.py  stable_diffusion_batch.py
governor_profiles/: ABRIOND.json  ABRIOND_complete_interview.json  ADVORPT.json  ADVORPT_complete_interview.json  AMBRIOL.json  AMBRIOL_complete_interview.json  ANDISPI.json  ANDISPI_complete_interview.json  ASPIAON.json  ASPIAON_complete_interview.json  AXXIARG.json  AXXIARG_complete_interview.json  AYDROPT.json  AYDROPT_complete_interview.json  CALZIRG.json  CALZIRG_complete_interview.json  CHASLPO.json  CHASLPO_complete_interview.json  CHIRZPA.json  CHIRZPA_complete_interview.json  COMANAN.json  COMANAN_complete_interview.json  CRALPIR.json  CRALPIR_complete_interview.json  CRPANIB.json  CRPANIB_complete_interview.json  CUCARPT.json  CUCARPT_complete_interview.json  DIALOIA.json  DIALOIA_complete_interview.json  DOAGNIS.json  DOAGNIS_complete_interview.json  DOANZIN.json  DOANZIN_complete_interview.json  DOCEPAX.json  DOCEPAX_complete_interview.json  DOXMAEL.json  DOXMAEL_complete_interview.json  GECAOND.json  GECAOND_complete_interview.json  (+145 more)
interviews/: README.md  extraction_statistics.json  interview_extractor.py  interview_loader.py  questions.json
lighthouse/: FINAL_9126_DEPLOYMENT_SUMMARY.md  REPOSITORY_VERIFICATION_REPORT.json  REPOSITORY_VERIFICATION_REPORT_SUMMARY.md  authentic_content_populator.py  autonomous_economic_export.json  autonomous_economic_export_summary.md  autonomous_economic_integration.py  bitcoin_inscription_prep.py  clean_lighthouse_builder.py  complete_knowledge_base_structure.md  comprehensive_knowledge_generator.py  comprehensive_lighthouse_builder.py  enhanced_batch_ai_governor.py  enhanced_questlines_export.json  full_9126_quest_generator.py  full_9126_questlines_export_summary.md  full_scale_quest_engine.py  knowledge_base_categories.md  lighthouse_builder.py  onchain_authenticity_proofs.py  onchain_authenticity_proofs_export.json  onchain_authenticity_proofs_export_summary.md  production_test_export.json  production_test_export_summary.md  repository_verification_system.py  rich_content_generator.py  source_citation_system.py  tap_trac_inscription_export.json  test_full_scale_export.json  test_full_scale_export_summary.md  test_lighthouse_builder.py  tradition_content_templates.py
onchain/: autonomous_tokenomics_data.json  bitcoin_randomness.py  bitcoin_randomness_data.json  comprehensive_integration.py  comprehensive_integration_data.json  enhanced_trac_indexer.py  tap_deployer.py  tap_hypertoken_data.json  tap_inscriber.py  trac_indexer_data.json  trac_indexer_integration.py
prototypes/: index.html  package.json  server.js
scripts/: README.md  enhance_lighthouse_traditions.py  enhanced_visual_prompts.py  fix_tradition_counts.py  validate_lighthouse_enhancement.py
src/: authenticity.rs  core.rs  governors.rs  lib.rs  traditions.rs  wasm.rs
story-engine/: Cargo.toml  README.md
story-engine/core/: branching_logic.rs  governor_integration.rs  narrative_generator.rs  trac_state_manager.rs
story-engine/templates/base_narratives/: enochian_foundation.json
story-engine/validation/: authenticity_scorer.py
story-engine/wasm_bindings/: lib.rs
tests/: comprehensive_test_report.json  gap_resolution_validation_report.json  integration_test_complete_system.py  integration_test_report.json  test_comprehensive_validation.py  test_gap_resolution_validation.py
ui/: index.html  manifest.json  sw.js
utilities/: content_indexer.py
validation/: content_metrics_validator.py
visual_prompt_gen/: ABRIOND_visual_prompt.json  ADVORPT_visual_prompt.json  AMBRIOL_visual_prompt.json  ANDISPI_visual_prompt.json  ASPIAON_visual_prompt.json  AXXIARG_visual_prompt.json  AYDROPT_visual_prompt.json  CALZIRG_visual_prompt.json  CHASLPO_visual_prompt.json  CHIRZPA_visual_prompt.json  COMANAN_visual_prompt.json  CRALPIR_visual_prompt.json  CRPANIB_visual_prompt.json  CUCARPT_visual_prompt.json  DIALOIA_visual_prompt.json  DOAGNIS_visual_prompt.json  DOANZIN_visual_prompt.json  DOCEPAX_visual_prompt.json  DOXMAEL_visual_prompt.json  GECAOND_visual_prompt.json  GEDOONS_visual_prompt.json  GEMNIMB_visual_prompt.json  GENADOL_visual_prompt.json  GMTZIAM_visual_prompt.json  LAPARIN_visual_prompt.json  LAVACON_visual_prompt.json  LAZDIXI_visual_prompt.json  LAZHIIM_visual_prompt.json  LEXARPH_visual_prompt.json  MATHVLA_visual_prompt.json  MIRZIND_visual_prompt.json  MOLPAND_visual_prompt.json  NABAOMI_visual_prompt.json  NIGRANA_visual_prompt.json  NOCAMAL_visual_prompt.json  NOTIABI_visual_prompt.json  OBUAORS_visual_prompt.json  (+56 more)
(+788 files in other folders)
