[package]
name = "enochian_cyphers"
version = "0.1.0"
edition = "2021"
description = "Enochian Divination: A Bitcoin Layer 1 mystical experience"
authors = ["BTCEnoch"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "console"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
# TAP Protocol and Bitcoin integration dependencies
sha2 = "0.10"
hex = "0.4"
# P2P networking simulation (for Kademlia DHT as per expert guidance)
# Note: Using minimal deps per zero-dependency constraint
rand = { version = "0.8", features = ["small_rng"] }
# Autonomous economics and cryptography
secp256k1 = { version = "0.28", features = ["rand"] }
# Additional dependencies for gap resolution
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1 